server/public/styles.css
* {
  margin: 0;
  max-width: 100%;
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: #ebf0f6;
}

.header {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Spectral', serif;
  background-color: #98ccd3;
  color: white;
  height: 60px;
}

.header-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-anchor {
  margin: 0 0.7rem;
  color: white;
  font-size: 1.2rem;
}

.home-buttons {
  display: flex;
  flex-direction: column;
}

.background-map {
  position: absolute;
  top: 60px;
  bottom: 0;
  left: 0;
  right: 0;
}

.button {
  background-color: #364e68;
  color: white;
  font-size: 1.5rem;
  border: none;
  border-radius: 0.4rem;
}

.main {
  font-family: 'Rubik', serif;
  position: relative;
  width: 375px;
  height: 692px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.create {
  border-radius: 0.4rem;
  padding: 1.5rem;
  margin: 1rem 0;
}

.add {
  position: absolute;
  bottom: 10px;
  width: 365px;
  left: 5px;
  padding: 1rem 0.5rem;
}

.add-poi-large,
.save {
  position: absolute;
  bottom: -10px;
  width: 355px;
  left: 10px;
  padding: 1rem 0.5rem;
}

.finish {
  position: absolute;
  bottom: 10px;
  left: 0.3rem;
  width: 365px;
  padding: 1rem 2rem;
}

.name {
  font-size: 1.5rem;
  text-align: center;
  background-color: #364e68;
  color: white;
  border: none;
  border-radius: 0.4rem;
  position: absolute;
  top: 0.3rem;
  left: 0.3rem;
  width: 365px;
  padding: 1rem 2rem;
}

::placeholder {
  color: rgba(255, 255, 255, 1);
}

.added {
  background-color: white;
  color: #364e68;
}

ul {
  padding-left: 0;
}

.trip-list {
  position: absolute;
  top: 75px;
  left: 5px;
  width: 365px;
}

.trip-list-item,
.location-text,
.search {
  font-family: 'Rubik', serif;
  color: #364e68;
  background-color: white;
  border: solid 0.15rem #364e68;
  border-radius: 0.4rem;
  list-style-type: none;
  padding: 0.7rem 15px;
  margin-bottom: 10px;
  position: relative;
}

.center {
  text-align: center;
}

.list-arrow {
  position: absolute;
  right: 10px;
  top: 25px;
  font-size: 1.5rem;
}

.trip-list-arrow {
  position: absolute;
  right: 10px;
  top: 19px;
  font-size: 1.5rem;
}

.location-page {
  position: relative;
  padding: 10px;
  height: 672px;
}

.locations {
  top: 8px;
}

.back-arrow {
  position: absolute;
  left: 10px;
  top: 13.5px;
  font-size: 2rem;
}

.location {
  position: absolute;
  left: 10px;
  top: 9px;
  font-size: 2rem;
}

.icons {
  margin-top: 10px;
  display: flex;
  justify-content: space-between;
  width: 10%;
  align-items: center;
}

.poi-list-container {
  max-height: 260px;
  background-color: white;
  border: solid 0.15rem #364e68;
  border-radius: 0.4rem;
  padding-bottom: 5px;
}

.poi-list {
  font-family: 'Rubik', serif;
  max-height: 230px;
  height: auto;
  margin: auto;
  margin-bottom: 7px;
  position: relative;
  overflow: hidden;
  overflow-y: scroll;
}

.poi-list li:not(:last-child) {
  margin-bottom: 5px;
  border-bottom: solid thin lightgray;
}

.poi-list-item {
  color: #364e68;
  display: flex;
  padding: 10px;
  position: relative;
}

.poi-img {
  width: 100px;
  height: 100px;
  border-radius: 0.4rem;
  margin-right: 10px;
}

.poi-form {
  position: relative;
  padding: 10px 0;
  display: flex;
}

.search {
  position: relative;
  width: 90%;
  font-size: 1rem;
  margin-bottom: 0;
  border-radius: 0.4rem 0 0 0.4rem;
  outline: none;
}

.search::placeholder {
  color: #364e68;
}

.poi-search {
  border-radius: 0 0.3rem 0.3rem 0;
  border: none;
  background-color: #364e68;
  color: white;
  padding: 0 1rem;
}

.results {
  height: 520px;
  margin: auto;
  padding: 0 0 10px;
  position: relative;
  overflow: hidden;
  overflow-y: scroll;
}

.add-poi {
  position: absolute;
  right: 5px;
  top: 42px;
  width: 35px;
  padding: 0.2rem 0.6rem;
}

.add-poi-text {
  width: 90%;
}

.foursquare-logo {
  width: 200px;
  margin-left: 10px;
}

.fs-logo {
  width: 35px;
  position: absolute;
  right: 5px;
  top: 5px;
}

.add-page {
  margin-left: 14px;
  margin-bottom: 5px;
}

.navbar {
  height: 60px;
  background-color: white;
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-family: 'Rubik', serif;
  font-size: 1.5rem;
}

.navbar-anchor {
  color: #364e68;
}

.background-img {
  position: absolute;
  top: 60px;
}

.hidden {
  display: none;
}

.none {
  bottom: 5px;
}

a {
  text-decoration: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.list-item {
  color: #364e68;
}

.back {
  color: white;
}

a:visited {
  text-decoration: none;
}

.header-nav {
  display: none;
}

.h1-anchor {
  color: white;
}

.location-map {
  height: 200px;
  border: solid #364e68;
  border-radius: 0.4rem;
  margin: 0 auto 10px;
}

@media screen and (min-width: 376px) {
  .map-form {
    width: 100%;
  }

  .name {
    position: relative;
    background-color: transparent;
    color: #364e68;
    font-size: 2.5rem;
    text-align: left;
    outline: none;
    left: 0;
    padding: 1rem 0;
  }

  ::placeholder {
    color: #364e68;
  }

  .page-container {
    width: 95%;
    margin: auto;
  }

  .main {
    width: 100vw;
    height: 550px;
    flex-direction: column-reverse;
  }

  .map-box {
    position: relative;
    width: 100%;
    height: 100%;
  }

  .add,
  .finish,
  .save {
    width: 60%;
    left: 20%;
    padding: 0.5rem 0.3rem;
    font-size: 1.2rem;
  }

  .poi-list-container {
    max-height: 160px;
  }

  .poi-list {
    max-height: 130px;
  }

  .add-poi-large {
    position: relative;
    width: 100%;
    left: 0;
    bottom: 0;
    padding: 0.7rem 0.5rem;
    margin: 10px 0;
  }

  .trip {
    flex-direction: column;
    justify-content: inherit;
    align-items: baseline;
  }

  .trip-list {
    width: 100%;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    left: 0;
    top: 0;
    height: 75%;
    overflow: hidden;
    overflow-y: scroll;
  }

  .trip-list-item {
    width: 100%;
    height: min-content;
  }

  .trip-title {
    display: flex;
    align-items: center;
    width: 100%;
  }

  .itinerary-list {
    width: 100%;
  }

  .back {
    position: relative;
    color: #364e68;
    width: 60px;
    align-items: initial;
  }

  .location-page {
    height: 100%;
    padding: 10px 0 0;
  }

  .back-arrow {
    position: relative;
    top: 0;
  }

  .location {
    position: absolute;
    top: 9px;
  }
}

@media screen and (min-width: 450px) {
  .add,
  .finish,
  .save {
    width: 50%;
    left: 25%;
  }
}

@media screen and (min-width: 500px) {
  .header-nav {
    display: initial;
  }

  .navbar {
    display: none;
  }

  .search {
    width: unset;
  }

  .save {
    top: 20px;
    right: 0;
    bottom: unset;
    left: unset;
    width: 80px;
    height: 46px;
  }
}

@media screen and (min-width: 576px) {
  .page-container {
    width: 80%;
  }

  .add,
  .finish {
    width: 40%;
    left: 30%;
    padding: 0.5rem 0.7rem;
    font-size: 1rem;
  }
}

@media screen and (min-width: 640px) {
  .trip-list-item {
    width: 49%;
  }

  .trip-list {
    justify-content: space-between;
  }

  .poi-search {
    right: 50%;
    top: 15%;
    height: 46px;
  }

  .search {
    width: 50%;
  }

  .results {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }
}

@media screen and (min-width: 700px) {
  .location-page {
    display: flex;
    flex-direction: column;
  }

  .location-map {
    height: 450px;
  }

  .row {
    display: flex;
    justify-content: space-between;
    flex-basis: 45%;
  }

  .column {
    width: 49%;
  }

  .viewPOI {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
  }

  .title {
    background-color: transparent;
    border: none;
    display: flex;
    padding: 0;
    align-items: center;
    font-size: 1.5rem;
  }

  .viewPOI-container {
    height: 100%;
  }

  .poi-list {
    max-height: 290px;
  }

  .poi-list-container {
    max-height: 320px;
  }

  .location {
    margin-right: 20px;
    position: relative;
    top: 0;
  }
}

@media screen and (min-width: 900px) {
  .add,
  .finish {
    max-width: 100%;
    width: 30%;
    left: 35%;
    font-size: 1.2rem;
  }
}

@media screen and (min-width: 1000px) {
  .page-container {
    width: 900px;
  }
}

.button:hover,
.location:hover,
.trip-list-item:hover,
.poi-search:hover {
  cursor: pointer;
}

